--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="examples/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src/examples"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
+	<classpathentry kind="lib" path="example_libs/jackson-core-asl-1.9.13.jar"/>
+	<classpathentry kind="lib" path="example_libs/jackson-jaxrs-1.9.13.jar"/>
+	<classpathentry kind="lib" path="example_libs/jackson-jaxrs-base-2.2.1.jar"/>
+	<classpathentry kind="lib" path="example_libs/jackson-jaxrs-json-provider-2.2.1.jar"/>
+	<classpathentry kind="lib" path="example_libs/jackson-mapper-asl-1.9.13.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.aop-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.asm-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.aspects-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.beans-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.context-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.context.support-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.core-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.expression-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.instrument-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.instrument.tomcat-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.jdbc-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.jms-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.orm-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.oxm-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.test-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.transaction-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.web-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.web.portlet-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.web.servlet-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/org.springframework.web.struts-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.beanutils-1.8.0.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.codec-1.3.0.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.digester-1.8.1.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.discovery-0.4.0.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.httpclient-3.1.0.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.io-1.4.0.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.lang-2.1.0.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="example_libs/com.springsource.org.apache.commons.net-1.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
